// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs/guide/metadata/restrict-attributes.md inline validation: boolean 1`] = `
[
  {
    "errorCount": 2,
    "filePath": "inline",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [
      {
        "column": 15,
        "line": 5,
        "message": "Attribute "quacks" should omit value",
        "offset": 135,
        "ruleId": "attribute-boolean-style",
        "ruleUrl": "https://html-validate.org/rules/attribute-boolean-style.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 6,
      },
      {
        "column": 23,
        "context": {
          "allowed": {
            "boolean": true,
          },
          "attribute": "quacks",
          "element": "my-component",
          "value": "duck",
        },
        "line": 5,
        "message": "Attribute "quacks" has invalid value "duck"",
        "offset": 143,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- ok: boolean attribute -->
<my-component quacks></my-component>

<!-- error: boolean attribute cannot take value -->
<my-component quacks="duck"></my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: deprecated 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [
      {
        "column": 15,
        "line": 2,
        "message": "Attribute "duck" is deprecated on <my-component> element",
        "offset": 56,
        "ruleId": "no-deprecated-attr",
        "ruleUrl": "https://html-validate.org/rules/no-deprecated-attr.html",
        "selector": "my-component:nth-child(1)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- error: uses deprecated attribute -->
<my-component duck="dewey"></my-component>

<!-- ok: omitted deprecated attribute -->
<my-component></my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: enum 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [
      {
        "column": 21,
        "context": {
          "allowed": {
            "enum": [
              "huey",
              "dewey",
              "louie",
            ],
          },
          "attribute": "duck",
          "element": "my-component",
          "value": "flintheart",
        },
        "line": 5,
        "message": "Attribute "duck" has invalid value "flintheart"",
        "offset": 180,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 10,
      },
    ],
    "source": "<!-- ok: attribute value is explicitly allowed -->
<my-component duck="dewey"></my-component>

<!-- error: attribute value is not one of the allowed values -->
<my-component duck="flintheart"></my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: omit 1`] = `[]`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: regexp 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [
      {
        "column": 22,
        "context": {
          "allowed": {
            "enum": [
              {
                "name": "/^\\d+$/",
                "pattern": /\\^\\\\d\\+\\$/,
              },
            ],
          },
          "attribute": "ducks",
          "element": "my-component",
          "value": "huey",
        },
        "line": 5,
        "message": "Attribute "ducks" has invalid value "huey"",
        "offset": 158,
        "ruleId": "attribute-allowed-values",
        "ruleUrl": "https://html-validate.org/rules/attribute-allowed-values.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- ok: any numerical value is allowed -->
<my-component ducks="3"></my-component>

<!-- error: non-numerical values are disallowed -->
<my-component ducks="huey"></my-component>",
    "warningCount": 0,
  },
]
`;

exports[`docs/guide/metadata/restrict-attributes.md inline validation: required 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "fixableErrorCount": 0,
    "fixableWarningCount": 0,
    "messages": [
      {
        "column": 2,
        "context": {
          "attr": "duck",
          "tagName": "<my-component>",
        },
        "line": 5,
        "message": "<my-component> is missing required "duck" attribute",
        "offset": 116,
        "ruleId": "element-required-attributes",
        "ruleUrl": "https://html-validate.org/rules/element-required-attributes.html",
        "selector": "my-component:nth-child(2)",
        "severity": 2,
        "size": 12,
      },
    ],
    "source": "<!-- ok: attribute is present -->
<my-component duck="dewey"></my-component>

<!-- error: attribute is omitted -->
<my-component></my-component>",
    "warningCount": 0,
  },
]
`;
